# fastcrop

./: README.md  fc-app.c  meson.build  meson.options
.github/actions/upload-release/: action.yml
.github/workflows/: ci.yml  release.yml
src/: crop-area.h  fc-app-window.c  fc-app-window.h  fc-app.c  fc-app.h  fc-options.h  main.c  meson.build  motion-events.c  motion-events.h
src/lib/: magick.c  magick.h
